<resources>
    <string name="app_name">Find Gymn</string>
    <string name="my_preference_key">james</string>
    <string name="my_preference">james</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_gymn">Avengers Gymn</string>
    <string name="title_home">"Avengers Gymn was started deriving the name from the famous 2018 Avengers Infinity War movie starring Thanos,\n"
        "Iron Man, Bruce Banner a.k.a Hulk, Black Panther, Star Lord, Groot, Rocket, The Widow, Vision, Dr. Strange …and many others"
        "\nWhat is most interesting about this actors is their incredible body build up that is a wonderful gymn motivation for our clients"

    "\n\nWe offer the following services\n"
       " *Body Building\n"
        " *Mass Reduction\n"
            " *Fitness\n"
        " *and others…"


    </string>
    <string name="title_dashboard">
        "\n\nThese are The Prices\n"
   "1. Daily-Ugx 3000\n"
      "2. Weekly-Ugx 18000\n"
       "3. Monthly-Ugx 60000\n"
        "4. Annually- Ugx 30000\n"
        "\nAs cheap as you could possibly imagine"


    </string>
    <string name="title_notifications">"\n\n\n!Alert\n"
    "There is a Fitness competition match and muscle show off competition  the whole of next week,\n"
       "the first runner up gets to earn Ugx 500000 in cash"</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="Gymn_name">Avengers Gymn</string>
    <string name="username">UserName</string>
    <string name="enter_your_username">Enter your Username</string>
    <string name="my_password">Password</string>
    <string name="loginButton">Login</string>
    <string name="or">OR</string>
    <string name="user_image">user image</string>
    <string name="title_activity_maps">Map</string>
    <string name="gymn_location">[Located At Adit Mall Opp.Bank Of Uganda Floor2 LockUp No.9]</string>
    <string name="call_us">Call Us</string>
</resources>
