<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:gravity="top"
    android:padding="10dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GymnActivity"
    android:background="#2351B53F"
    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/gymn_fitness"
        android:paddingTop="0dp"
         />

    <TextView
        android:id="@+id/gymn_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Gymn_name"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="#D5E61212"
        />

    <TextView
        android:id="@+id/gymn_Location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gymn_location"
        android:textSize="10dp"
        android:textStyle="italic"
        android:layout_gravity="center"
        android:textColor="#FF5722"
        android:paddingBottom="10dp"
        />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="377dp"
        android:linksClickable="true"
        android:longClickable="true"
        android:paddingTop="15dp"
        android:text="@string/title_home"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />



</LinearLayout>